// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax bn az bo b1 b2 b3 b4 bp bq br bs be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Large
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Button Variant 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Primary
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Secondary
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Size 1`] = `
Array [
  <div
    className=""
  >
    <table>
      <tbody>
        <tr>
          <td>
            <p>
              Small
            </p>
            <div
              className="bt bu bv bw b3 b1 b4 b2 bx by"
              data-baseweb="card"
            >
              <img
                className="b3 b1 bz c0"
                src="https://image.tmdb.org/t/p/w500/pWt1iRuhNpeVDNP2QiUT2C5OiBt.jpg"
              />
              <div
                className="c1 c2 c3 c4"
              >
                <h1
                  className="ax ay az b0 c5 at au av c6 c7 c8 c9 ca"
                >
                  Downtown Abbey
                </h1>
                <div
                  className="cb cc ax cd ce cf"
                >
                  <div
                    className="cb cc ax cd ce cf"
                    style={
                      Object {
                        "color": "#AFAFAF",
                      }
                    }
                  >
                    September 20
                  </div>
                </div>
              </div>
            </div>
          </td>
          <td>
            <p>
              Medium
            </p>
            <div
              className="bt bu bv bw b3 b1 b4 b2 bx cg"
              data-baseweb="card"
            >
              <img
                className="b3 b1 bz c0"
                src="https://image.tmdb.org/t/p/w500/pWt1iRuhNpeVDNP2QiUT2C5OiBt.jpg"
              />
              <div
                className="c1 c2 c3 c4"
              >
                <h1
                  className="ax ch ce bo c5 at au av c6 c7 c8 c9 ca"
                >
                  Downtown Abbey
                </h1>
                <div
                  className="cb cc ax cd ce cf"
                >
                  <div
                    className="cb cc ax cd ce cf"
                    style={
                      Object {
                        "color": "#AFAFAF",
                      }
                    }
                  >
                    September 20
                  </div>
                </div>
              </div>
            </div>
          </td>
          <td>
            <p>
              Large
            </p>
            <div
              className="bt bu bv bw b3 b1 b4 b2 bx ci"
              data-baseweb="card"
            >
              <img
                className="b3 b1 bz c0"
                src="https://image.tmdb.org/t/p/w500/pWt1iRuhNpeVDNP2QiUT2C5OiBt.jpg"
              />
              <div
                className="c1 c2 c3 c4"
              >
                <h1
                  className="ax bn az bo c5 at au av c6 c7 c8 c9 ca"
                >
                  Downtown Abbey
                </h1>
                <div
                  className="cb cc ax cd ce cf"
                >
                  <div
                    className="cb cc ax cd ce cf"
                    style={
                      Object {
                        "color": "#AFAFAF",
                      }
                    }
                  >
                    September 20
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Modal Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open default modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open full modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open auto modal
    </button>
  </div>,
  <div
    className=""
  />,
]
`;
